--- a/source/_static/wide.css
+++ b/source/_static/wide.css
@@ -10,8 +10,8 @@
 */
 div.body {
     min-width: 360px;
-    max-width: 1100px !important;
+    max-width: 100% !important;
 }
 div.document div.documentwrapper {
-  max-width: 1100px !important;
+  max-width: 100% !important;
 }
