--- a/source/_static/wide.css
+++ b/source/_static/wide.css
@@ -7,11 +7,16 @@
 
 /*
   Maximum page width for file browser with Piccolo sphinx theme
+
+  Use full page width including the space normally reserved for
+  the page contents sidebar.
 */
 div.body {
     min-width: 360px;
     max-width: 100% !important;
 }
+
 div.document div.documentwrapper {
-  max-width: 100% !important;
+    margin-right: 1em !important;
+    max-width: 100% !important;
 }
