--- a/source/_static/custom.css
+++ b/source/_static/custom.css
@@ -99,7 +99,7 @@ img.screenshot {
   Background image from the main FLAMINGO site
 */
 div.document {
-    background: url("../_static/FLAMINGO_webpage_background_cropped.png") repeat-x;
+    background: url("/flamingo/_static/FLAMINGO_webpage_background_cropped.png") repeat-x;
     background-position: 0 2.0rem;
 }
 
